--- a/store/blocks/home.jsonc
+++ b/store/blocks/home.jsonc
@@ -5,35 +5,22 @@
       "responsive-layout.mobile#mobile"
     ]
   },
+
   "responsive-layout.desktop#desktop": {
     "children": [
       "rich-text#desktop",
       "image#desktop"
     ]
   },
-  
-  "responsive-layout.mobile#mobile": {
-    "children": [
-      "rich-text#mobile",
-      "image#mobile"
-    ]
-  },
-  
+
   "rich-text#desktop": {
     "props": {
-      "text": "# Your Coffee, Your Way \n #### New Coffee Makers Collection",
+      "text": "### Your Coffee, Your Way \n #### New Coffee Makers Collection",
       "textPosition": "CENTER",
       "textAlignment": "CENTER"
     }
   },
-  
-  "rich-text#mobile": {
-    "props": {
-      "text": "# Your Coffee, Your Way \n #### New Coffee Makers Collection",
-      "textPosition": "CENTER",
-      "textAlignment": "CENTER"
-    }
-  },
+
   "image#desktop": {
     "props": {
       "src": "https://appliancetheme.vteximg.com.br/arquivos/Responsive-Image-Desktop.jpg?q=1",
@@ -45,6 +32,21 @@
     }
   },
   
+  "responsive-layout.mobile#mobile": {
+    "children": [
+      "rich-text#mobile",
+      "image#mobile"
+    ]
+  },
+
+  "rich-text#mobile": {
+    "props": {
+      "text": "### Your Coffee, Your Way \n #### New Coffee Makers Collection",
+      "textPosition": "CENTER",
+      "textAlignment": "CENTER"
+    }
+  },
+
   "image#mobile": {
     "props": {
       "src": "https://appliancetheme.vteximg.com.br/arquivos/Responsive-Image-Mobile.jpg?q=1",
@@ -55,5 +57,4 @@
       "alt": "Coffee Makers Collection"
     }
   }
-  
 }
