--- a/store/blocks/product.jsonc
+++ b/store/blocks/product.jsonc
@@ -35,6 +35,7 @@
 
   "flex-layout.col#right": {
     "children": [
+      "product-name",
       "product-identifier.product",
       "product-price",
       "flex-layout.row#qty-sku"
@@ -44,7 +45,6 @@
       "verticalAlign": "middle"
     }
   },
-
   "flex-layout.row#qty-sku": {
     "children": [
       "sku-selector",
@@ -75,12 +75,6 @@
     "props": {
       "showSavings": true,
       "showListPrice": true
-    }
-  },
-  "buy-button": {
-    "props": {
-      "isOneClickBuy": true,
-      "showTooltipOnSkuNotSelected": false
     }
   }
 }
