--- a/store/blocks/product.jsonc
+++ b/store/blocks/product.jsonc
@@ -71,6 +71,8 @@
 
   "sku-selector": {
     "props": {
+      "hideImpossibleCombinations": false,
+      "visibleVariations": [],
       "showValueForVariation": "image",
       "showVariationsErrorMessage": true
 
