fixing sku-selector add initial selection

--- a/store/blocks/product.jsonc
+++ b/store/blocks/product.jsonc
@@ -72,7 +72,7 @@
   "sku-selector": {
     "props": {
       "hideImpossibleCombinations": false,
-      "visibleVariations": [],
+      "initialSelection": "empty",
       "showValueForVariation": "image",
       "showVariationsErrorMessage": true
 
